<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/menu_main_secions_item"
		android:title="@string/menu_category_shows">

		<menu>
			<group
				android:id="@+id/menu_main_secions"
				android:checkableBehavior="single">
				<item
					android:id="@+id/menu_live"
					android:icon="@drawable/ic_ondemand_video_white_24dp"
					android:title="@string/activity_main_tab_live" />

				<item
					android:id="@+id/menu_mediathek"
					android:icon="@drawable/ic_playlist_play_white_24dp"
					android:title="@string/activity_main_tab_mediathek" />
			</group>
		</menu>

	</item>

	<item
		android:id="@+id/menu_main_meta_item"
		android:title="@string/menu_category_settings">

		<menu>
			<group android:id="@+id/menu_main_meta">
				<item
					android:id="@+id/menu_about"
					android:icon="@drawable/ic_info_white_24dp"
					android:title="@string/menu_about" />

				<item
					android:id="@+id/menu_settings"
					android:icon="@drawable/ic_settings_white_24dp"
					android:title="@string/menu_settings" />
			</group>
		</menu>

	</item>
</menu>
