...
		<Button
			android:id="@+id/button_faq"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/activity_faq_title" />

		<Button
			android:id="@+id/button_changelog"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/activity_changelog_title" />

		<Button
			android:id="@+id/button_libraries"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
...
