...
		android:layout_height="wrap_content"
		android:layout_marginVertical="16dp"
		android:background="@color/colorSurface"
		android:focusable="true"
		android:orientation="horizontal"
		android:padding="8dp"
		app:layout_constraintBottom_toTopOf="@id/list"
		app:layout_constraintEnd_toStartOf="@id/refresh_button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:layout_width="0dp"
...
	<ImageButton
		android:id="@+id/refresh_button"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:background="?android:attr/selectableItemBackground"
		android:contentDescription="@string/menu_refresh"
		android:paddingHorizontal="16dp"
		android:src="@drawable/ic_refresh_white_24dp"
		app:layout_constraintBottom_toBottomOf="@id/search_wrapper"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/search_wrapper"
		app:layout_constraintTop_toTopOf="@id/search_wrapper" />
...
