<?xml version="1.0" encoding="utf-8"?>

<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/gridview_channels"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clipToPadding="false"
	tools:context=".app.livestream.ui.list.ChannelListFragment"
	tools:showIn="@layout/activity_main" />
